Configuring with --disable-cds causes cdsConfig.hpp compilation errors

XMLWordPrintable

      When configured with --disable-cds, the compilation of cdsConfig.hpp errors occur.

      ```
      src/hotspot/share/cds/cdsConfig.hpp:82:55: error: use of undeclared identifier '_module_patching_disables_cds'; did you mean 'module_patching_disables_cds'?
        static bool module_patching_disables_cds() { return _module_patching_disables_cds; }
                                                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                            module_patching_disables_cds
      ```

            Assignee:
            Matias Saavedra Silva
            Reporter:
            Roger Riggs
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: