8353303: Configuring with --disable-cds causes cdsConfig.hpp compilation errors