src/hotspot/share/oops/objArrayKlass.hpp
@@ -101,9 +101,12 @@ class ObjArrayKlass : public ArrayKlass {
   oop protection_domain() const { return bottom_klass()->protection_domain(); }
 
   virtual void metaspace_pointers_do(MetaspaceClosure* iter);
+
+#if INCLUDE_CDS
   virtual void remove_unshareable_info();
   virtual void remove_java_mirror();
   void restore_unshareable_info(ClassLoaderData* loader_data, Handle protection_domain, TRAPS);
+#endif
 
  public:
   static ObjArrayKlass* cast(Klass* k) {
